# dexc

./: .gitignore  dexc.py  pyproject.toml  readme.md  tests.py
.github/workflows/: publish.yml
